# ai-news-aggregator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DockerFile  README.md  article_quality_report.md  docker-compose.yml  main.py  pyproject.toml  pyproject.toml.bak.test
.github/workflows/: ci.yml  daily.yml
app/: config.py
app/agent/: agent_loop.py  mcp_server.py
app/db/: __init__.py  connection.py  models.py  repository.py  schema.py
app/embeddings/: __init__.py  embed_service.py  vector_store.py
app/eval/: evaluator.py
app/ingestion/: __init__.py  base.py  deduplicator.py  rss_scraper.py  run.py  youtube_scraper.py
app/llm/: __init__.py  groq_client.py  summarizer.py  synthesizer.py  theme_grouper.py
app/notifications/: email_sender.py
app/publishing/: blog_generator.py  figure_generator.py  style_profile.md
scripts/: add_columns.py  setup_neon.sql
tests/: test_setup.py
